--- a/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
+++ b/Chapitre 7 - Du script a l'application - module et gestion des erreurs.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,17 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run cours-packages/exemple-01/run.py"
    ]
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,17 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "modeles\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cette commande permet de lancer le script directement depuis ce module\n",
     "! cd cours-packages/exemple-02 && python run.py"
@@ -249,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,18 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "application\r\n",
-      "modeles\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cette commande permet de lancer le script directement depuis ce module\n",
     "! cd cours-packages/exemple-02 && python run2.py"
@@ -355,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,17 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thibault utilise Gazetteer\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cette commande permet de lancer le script directement depuis ce module\n",
     "! cd cours-packages/exemple-03 && python run.py"
@@ -488,18 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/thibault/dev/cours-python/cours-flask/exemple12\n",
-      "/home/thibault/dev/cours-python/cours-flask/exemple12/gazetteer/templates\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "% pycat cours-flask/exemple12/path.py\n",
     "% run cours-flask/exemple12/path.py"
@@ -554,21 +512,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-70a5ac505fb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mliste\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mliste\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste = [0,1,2]\n",
     "liste[3]"
@@ -587,18 +533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Je me suis trompé !\n",
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    print(liste[3])\n",
@@ -611,7 +548,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Que faire quand on veut gérer une erreur spécifique"
+    "### Que faire quand on veut gérer une erreur spécifique\n",
+    "\n",
+    "Il est possible de vouloir gérer des erreurs de manière différente. Par exemple, dans le code suivant, nous avons une liste qui contient des dictionnaires, on peut avoir une erreur liée à l'index utilisé (IndexError) ou une erreur liée à une clée particulière. \n",
+    "\n",
+    "On fait alors suivre `except` par le nom ou les noms (séparés par des virgules) des erreurs que l'on veut gérer à part. Si une erreur ne fait pas partie des erreurs attendues, l'erreur n'est pas ignorée :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objets = [\n",
+    "    {\n",
+    "        \"nom\": \"R2D2\",\n",
+    "        \"prix\": 85000\n",
+    "    },\n",
+    "    {\n",
+    "        \"nom\": \"La Force\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"nom\": \"BB8\",\n",
+    "        \"prix\": 20000\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "def convertir(index_objet, cour_credit_republicain=0.1):\n",
+    "    \"\"\" Convertit le prix d'un objet du monde de Star Wars en Trugut\n",
+    "    \n",
+    "    http://fr.starwars.wikia.com/wiki/Cr%C3%A9dit_Galactique_Standard\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        print(\"{objet} a un prix de {credits} soit {trugut} Truguts\".format(\n",
+    "            objet=objets[index_objet][\"nom\"],\n",
+    "            credits=objets[index_objet][\"prix\"],\n",
+    "            trugut=objets[index_objet][\"prix\"]/cour_credit_republicain\n",
+    "        ))\n",
+    "        return objets[index_objet][\"prix\"]/cour_credit_republicain\n",
+    "    except IndexError:\n",
+    "        print(\"`Ce qui n'est pas dans nos collections n'existe pas`\")\n",
+    "        return None\n",
+    "    except KeyError:\n",
+    "        print(\"L'objet {} n'a pas toutes les données nécessaires\".format(index_objet))\n",
+    "        return None\n",
+    "\n",
+    "convertir(0)\n",
+    "print(\"---\")\n",
+    "convertir(1)\n",
+    "print(\"---\")\n",
+    "convertir(3)\n",
+    "print(\"---\")\n",
+    "convertir(2, 0)\n"
    ]
   },
   {
@@ -625,29 +614,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Je me suis trompé !\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-61108c1cc242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Je me suis trompé !\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-11-61108c1cc242>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mliste\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Je me suis trompé !\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mma_variable_erreur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    print(liste[3])\n",
@@ -672,9 +641,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Important\n",
+    "\n",
+    "La gestion d'erreur ne devrait être utilisée qu'en cas de force majeur ! Elle est en effet plus consommatrice que des simples `if`-`else` : tant que vous pouvez le prévoir, tentez de couvrir votre code via des conditions et non des `try-except`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercice\n",
     "\n",
-    "Gestion des erreurs : afficher une page d'erreur quand un lieu n'existe pas"
+    "Le code suivant peut créer une erreur :\n",
+    "\n",
+    "```python\n",
+    "lieux = {\n",
+    "    0: {\n",
+    "        \"nom\": \"Col. Lugdunum\",\n",
+    "        \"moderne\": \"Lyon\",\n",
+    "        \"latlong\": [45.762095775, 4.822438025],\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"Col. Lugdunum was a Roman military colony from 43 BC and a major center in Gaul. Marcus \"\n",
+    "                       \"Agrippa was involved in its expansion and two Roman emperors, Claudius and Caracalla, \"\n",
+    "                       \"were born there.\"\n",
+    "    },\n",
+    "    1: {\n",
+    "        \"nom\": \"Samarobriva Ambianorum\",\n",
+    "        \"moderne\": \"Amiens\",\n",
+    "        \"type\": \"ville\",\n",
+    "        \"description\": \"An ancient place, cited: BAtlas 11 C3 Samarobriva Ambianorum \",\n",
+    "        \"latlong\": [49.8936075, 2.297948]\n",
+    "    }\n",
+    "}\n",
+    "@app.route(\"/place/<int:place_id>\")\n",
+    "def lieu(place_id):\n",
+    "    return render_template(\"pages/place.html\", nom=\"Gazetteer\", lieu=lieux[place_id])\n",
+    "```\n",
+    "\n",
+    "1. Pouvez-vous dire dans quelles conditions ?\n",
+    "2. Récupérez le nom de l'erreur\n",
+    "3. Ajoutez un `try-except`\n",
+    "    4. Quel code HTTP devriez-vous rajouter ?"
    ]
   }
  ],
