Design du chapitre 8. Pagination à suivre

--- a/Chapitre 8 - Mon premier formulaire et la recherche.ipynb
+++ b/Chapitre 8 - Mon premier formulaire et la recherche.ipynb
@@ -122,23 +122,74 @@
     "```python\n",
     "@app.route(\"/recherche\")\n",
     "def recherche():\n",
-    "    # On préfèrera l'utilisation de .get() ici \n",
+    "    # On préfèrera l'utilisation de .get() ici\n",
     "    #   qui nous permet d'éviter un if long (if \"clef\" in dictionnaire and dictonnaire[\"clef\"])\n",
     "    motclef = request.args.get(\"keyword\", None)\n",
-    "    # On crée une liste vide de résultat (qui restera vide par défaut \n",
+    "    # On crée une liste vide de résultat (qui restera vide par défaut\n",
     "    #   si on n'a pas de mot clé)\n",
     "    resultats = []\n",
     "    # On fait de même pour le titre de la page\n",
     "    titre = \"Recherche\"\n",
     "    if motclef:\n",
     "        resultats = Place.query.filter(\n",
-    "            Place.nom.like(\"%{}%\".format(motclef))\n",
+    "            Place.place_nom.like(\"%{}%\".format(motclef))\n",
     "        ).all()\n",
-    "        titre = \"Résultat pour la recherche\n",
-    "    return render_templace(\"pages/recherche.html\", resultats=resultats, titre=titre)   \n",
+    "        titre = \"Résultat pour la recherche `\" + motclef + \"`\"\n",
+    "    return render_template(\"pages/recherche.html\", resultats=resultats, titre=titre)\n",
     "```\n",
     "\n",
-    "#### Nouveau template : `templates/pages/recherche.html`"
+    "#### Faire une requête `LIKE`\n",
+    "\n",
+    "Pour construire une requête LIKE avec SQL Alchemy:\n",
+    "\n",
+    "- On construit une requête à filtre `Place.query.filter()`\n",
+    "- Dans le filtre, on ajoute la propriété de champ (ici, `Place.place_nom`)\n",
+    "- On fait suivre ce champ de la méthode `.like()` avec le contenu de la recherche \n",
+    "    - Ici les jokers `%` entourent la valeur de mot clef\n",
+    "- On récupère l'ensemble des résultats via `.all()`\n",
+    "\n",
+    "#### Nouveau template : `templates/pages/recherche.html`\n",
+    "\n",
+    "```html\n",
+    "{% extends \"conteneur.html\" %}\n",
+    "\n",
+    "{% block titre %}| {{titre}}{%endblock%}\n",
+    "\n",
+    "{% block corps %}\n",
+    "<h1>{{titre}}</h1>\n",
+    "    {% if resultats %}\n",
+    "    <p>Il y a {{resultats|length}} lieux qui répondent à votre requête :</p>\n",
+    "        <ul>\n",
+    "            {% for lieu in resultats %}\n",
+    "                <li><a href=\"{{url_for('lieu', place_id=lieu.place_id)}}\">{{lieu.place_nom}}</a></li>\n",
+    "            {% endfor %}\n",
+    "        </ul>\n",
+    "    {% endif %}\n",
+    "{% endblock %}\n",
+    "```\n",
+    "\n",
+    "#### `templates/container.html`\n",
+    "\n",
+    "On corrige afin de metre l'action au formulaire :\n",
+    "\n",
+    "```html\n",
+    "  <nav class=\"navbar navbar-expand-md navbar-dark bg-dark justify-content-between\">\n",
+    "    <a class=\"navbar-brand\" href=\"{{ url_for('accueil') }}\">Gazetteer</a>\n",
+    "    <form class=\"form-inline\" action=\"{{url_for(\"recherche\")}}\" method=\"GET\">\n",
+    "      <input class=\"form-control\" name=\"keyword\" type=\"search\" placeholder=\"Recherche rapide\" aria-label=\"Recherche\">\n",
+    "      <button class=\"btn btn-outline-info\" type=\"submit\">Rechercher</button>\n",
+    "    </form>\n",
+    "  </nav>\n",
+    "```\n",
+    "\n",
+    "#### Pour lancer l'exemple en terminal\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple13\n",
+    "python run.py\n",
+    "```"
    ]
   },
   {
@@ -147,7 +198,28 @@
    "source": [
     "## Multiplier les formulaires\n",
     "\n",
-    "##"
+    "À partir du moment où la page de réception du formulaire est déjà disponible, on peut multiplier ce formulaire. Qu'importe le nombre d'entrée, il suffit d'une seule sortie !\n",
+    "\n",
+    "Pour ce faire, on a créer un nouveau template `partials/recherche.html` que l'on incluera sur la page d'accueil et la page de recherche.\n",
+    "\n",
+    "Regardez les templates de l'exemple14 puis lancez l'exemple.\n",
+    "\n",
+    "#### Pour lancer l'exemple en terminal\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple14\n",
+    "python run.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `LIMIT X` et pagination en générale\n",
+    "\n"
    ]
   }
  ],
