--- a/Chapitre 9 - Requêtes SQLAlchemy fines.ipynb
+++ b/Chapitre 9 - Requêtes SQLAlchemy fines.ipynb
@@ -354,12 +354,166 @@
     "\n",
     "Heureusement, SQL alchemy a une petite option bien sympathique qui vient remplacer `.all()` : `.paginate()` !\n",
     "\n",
-    "#### La fonction paginate\n",
+    "#### La méthode paginate\n",
     "\n",
+    "La méthode `paginate()` prend 2 grands paramètres :\n",
+    "- `page=` qui correspond au numéro de page\n",
+    "- `per_page=` qui correspond au nombre de réponses maximal à récupérer.\n",
     "\n",
+    "Ainsi, on écrira le code suivant pour avoir la page 2 de pages avec 2 résultats maximum :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pagination = Place.query.filter(Place.place_type==\"settlement\").order_by(Place.place_nom).paginate(page=2, per_page=2)\n",
+    "\n",
+    "for lieu in pagination.items:\n",
+    "    print(lieu.place_nom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explications:**\n",
+    "\n",
+    "Pour paginer, on aura donc :\n",
+    "\n",
+    "- `.paginate()` avec les deux paramètres `page` et `per_page`\n",
+    "- on bouclera sur la propriété `.items` du résultat de `.paginate()` afin d'afficher les objets de la page actuelle.\n",
+    "\n",
+    "La méthode paginate va renvoyer un objet de Pagination (*[documentation](http://flask-sqlalchemy.pocoo.org/2.1/api/?highlight=pagination#flask.ext.sqlalchemy.Pagination)*) qui nous permettra de créer des liens et une pagination jolie à l'oeil. Cet objet contient plusieurs propriétés intéressantes :\n",
+    "\n",
+    "- `items` qui nous permet donc de retrouver les résultats de la page actuelle\n",
+    "- `has_next` qui retournera `True` si il y a une page suivante\n",
+    "- `has_prev` qui retournera `True` si il y a une page précédente\n",
+    "- `iter_pages(left_edge=2, left_current=2, right_current=5, right_edge=2)` qui permet de construire facilement des paginations en HTML en ayant une boucle à portée de main. On en verra plus [plus bas](#Utilisation-de-paginate-dans-un-template)\n",
+    "- `next_num` qui retourne le numéro de la page suivante\n",
+    "- `page` qui retourne le numéro de la page actuelle\n",
+    "- `pages` qui retourne le nombre total de pages\n",
+    "- `prev_num` qui retourne le numéro de la page précédente\n",
+    "- `total` qui retourne le nombre total de résultats\n",
+    "\n",
+    "Ainsi, on aura :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Il y a {total_resultats} résultats soient {pages} pages\".format(\n",
+    "    total_resultats=pagination.total,\n",
+    "    pages=pagination.pages\n",
+    "))\n",
+    "print(\"La page suivante est la \" + str(pagination.next_num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Utilisation de paginate dans un template\n",
     "\n",
-    "#### Exemple 15"
+    "La méthode `iter_pages()` est très efficace car elle génère automatiquement le numéro des pages à afficher à partir de 4 paramètres :\n",
+    "- le nombre de pages à afficher au tout départ de la liste (les premières pages) : `left_edge`;\n",
+    "- le nombre de pages qui précède la page actuelle à afficher : `left_current`;\n",
+    "- le nombre de pages qui suive la page actuelle à afficher : `right_current`;\n",
+    "- le nombre de pages à afficher à la fin de la liste (les premières pages) : `right_edge`;\n",
+    " \n",
+    "Ainsi, pour 100 pages et la page 77, on aura pour les paramètres `.iter_pages(left_edge=2, left_current=2, right_current=5, right_edge=2)` : 1,2,75,76,77,78,79,80,81,82,99,100 où:\n",
+    "- `left_edge` produit 1 et 2\n",
+    "- `left_current` produit 75 et 76\n",
+    "- la page actuelle est 77\n",
+    "- `right_current` produit 78, 79, 80, 81 et 82\n",
+    "- `right_edge` produit 99 et 100\n",
+    "\n",
+    "\n",
+    "**Exercice:**  Pour 70 pages, quels seront les numéros de page afficher pour la page N°45 et la pagination suivante : `.iter_pages(left_edge=2, left_current=2, right_current=5, right_edge=2)`\n",
+    "\n",
+    "**Attention**: La boucle tourne sur les pages qui ne sont pas concernées par la pagination quand même. Elle renvoie simplement `None` au lieu d'un numéro. On peut alors l'ignorer facilement :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for page in pagination.iter_pages(left_edge=2, left_current=2, right_current=5, right_edge=2):\n",
+    "    if page:\n",
+    "        print(page)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un template simple serait alors (dans le cadre de la recherche)\n",
+    "```html\n",
+    "<div class=pagination>\n",
+    "{%- for page in pagination.iter_pages() %}\n",
+    "{% if page %}\n",
+    "  {% if page != pagination.page %}\n",
+    "    <a href=\"{{ url_for(\"recherche\", keyword=keyword, page=page) }}\">{{ page }}</a>\n",
+    "  {% else %}\n",
+    "    <strong>{{ page }}</strong>\n",
+    "  {% endif %}\n",
+    "{% else %}\n",
+    "  <span class=ellipsis>…</span>\n",
+    "{% endif %}\n",
+    "{%- endfor %}\n",
+    "</div>\n",
+    "```\n",
+    "\n",
+    "**Avez-vous remarqué ?** Quand les paramètres de `url_for` ne font pas partie de la fonction de base, elles sont transformées en paramètres GET (et sont donc récupérables via `request.args` !)\n",
+    "\n",
+    "Ce qui avec un peu de style bootstrap :\n",
+    "\n",
+    "```html\n",
+    "<nav aria-label=\"research-pagination\">\n",
+    "  <ul class=\"pagination\">\n",
+    "    {%- for page in pagination.iter_pages() %}\n",
+    "        {% if page %}\n",
+    "\n",
+    "          {% if page != pagination.page %}\n",
+    "            <li class=\"page-item\">\n",
+    "                <a class=\"page-link\" href=\"{{ url_for(\"recherche\", keyword=keyword, page=page) }}\">{{page}}</a>\n",
+    "            </li>\n",
+    "          {% else %}\n",
+    "            <li class=\"page-item active disabled\">\n",
+    "              <a class=\"page-link\">{{page}} <span class=\"sr-only\">(actuelle)</span></a>\n",
+    "            </li>\n",
+    "          {% endif %}\n",
+    "\n",
+    "        {% else %}\n",
+    "            <li class=\"page-item disabled\">\n",
+    "              <a class=\"page-link\">...</a>\n",
+    "            </li>\n",
+    "        {% endif %}\n",
+    "\n",
+    "    {%- endfor %}\n",
+    "  </ul>\n",
+    "</nav>\n",
+    "```\n",
+    "\n",
+    "#### Exemple 15\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple15\n",
+    "python run.py\n",
+    "```\n",
+    "\n",
+    "#### Exercice\n",
+    "\n",
+    "On proposera une interface de navigation de type index via une nouvelle route de l'application. La pagination réutilisera la limite `LIEUX_PAR_PAGES` trouvées dans `gazetteer.routes`."
    ]
   }
  ],
